--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@drawable/my_icon1"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VrtvActivity"></activity>
+        <activity android:name=".SetOrderActivity"/>
+        <activity android:name=".VrtvActivity" />
         <activity android:name=".ProductDetailsActivity" />
         <activity android:name=".MoreListActivity" />
         <activity
@@ -33,7 +34,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
